# clip

./: .gitignore  .pylintrc  Makefile  README.rst  check  clip.old  clip.py  clip3.py  pyproject.toml  requirements.txt  run-coverage  samples.py  scratch.py  setup.py  test_clip.old  test_clip.py  test_clip3.py
.github/workflows/: deploy-docs.yaml
clip/: __init__.py  alpha.py  audio.py  base.py  cache.py  chain.py  clip.py  color.py  composite.py  crop_slice.py  dimensions.py  fade.py  ffmpeg.py  filter.py  from_file.py  glob.py  hold.py  ken_burns.py  loop.py  metrics.py  pdf.py  preview.py  progress.py  resample.py  rosbag.py  rotate.py  save_audio.py  save_gif.py  save_mp4.py  scale.py  spin.py  stack.py  subtitles.py  superimpose.py  text.py  util.py  validate.py  version.py  video.py  zip.py  (+1 more)
doc/: api.rst  conf.py  details.rst  index.rst  user.rst
docs/: Makefile  api.rst  conf.py  examples.rst  generate.py  guide.rst  index.rst  install.rst  reference.rst  user.rst
examples/: auto_subtitle.py  bounce.py  bounce_text.py  noise_reduce.py  text_to_speech.py  wipe.py
lab/: tune_max_gap.py
test/: test_clip.py
